<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/username"
            style="@style/inputText"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:padding="10dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            style="@style/inputText"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLines="1" />

        <!-- Login Button -->

        <Button
            android:id="@+id/submit"
            android:text="@string/login"
            style="@style/submitButton"
            android:layout_marginTop="20dp"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/linkToRegisterScreenButton"
            style="@style/submitButton"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:text="@string/register"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>