<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameLayout"
            android:transitionName="usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:hint="@string/hint_username"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textCapWords"
                style="@style/inputText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:transitionName="emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                style="@style/inputText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:transitionName="passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                style="@style/inputText"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/submit"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            style="@style/submitButtonPrimary"/>

        <!-- Link to Login Screen -->

        <!--<Button-->
            <!--android:id="@+id/linkToLoginScreenButton"-->
            <!--style="@style/submitButtonSecondary"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:text="@string/login"-->
            <!--android:textAllCaps="false" />-->
    </LinearLayout>

</LinearLayout>